--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# set the participant number\n",
-    "PNUM = \"01\""
+    "PNUM = \"13\""
    ]
   },
   {
@@ -40,11 +40,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file raw_data\\P01-raw.fif...\n",
+      "Opening raw data file raw_data\\P13-raw.fif...\n",
       "Isotrak not found\n",
       "    Read a total of 1 projection items:\n",
-      "        Average EEG reference (1 x 64)  idle\n",
-      "    Range : 0 ... 2478165 =      0.000 ...  4840.166 secs\n",
+      "        Average EEG reference (1 x 66)  idle\n",
+      "    Range : 0 ... 2511914 =      0.000 ...  4906.082 secs\n",
       "Ready.\n"
      ]
     }
@@ -63,18 +63,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Raw | P01-raw.fif, 69 x 2478166 (4840.2 s), ~78 kB, data not loaded>\n",
+      "<Raw | P13-raw.fif, 71 x 2511915 (4906.1 s), ~80 kB, data not loaded>\n",
       "<Info | 11 non-empty values\n",
-      " bads: 3 items (P8, P10, T8)\n",
+      " bads: 1 items (Iz)\n",
       " ch_names: Fp1, AF7, AF3, F1, F3, F5, F7, FT7, FC5, FC3, FC1, C1, C3, C5, ...\n",
-      " chs: 64 EEG, 4 EOG, 1 Stimulus\n",
+      " chs: 66 EEG, 4 EOG, 1 Stimulus\n",
       " custom_ref_applied: False\n",
       " file_id: 4 items (dict)\n",
       " highpass: 0.0 Hz\n",
-      " lowpass: 104.0 Hz\n",
-      " meas_date: 2015-01-28 17:39:57 UTC\n",
+      " lowpass: 417.0 Hz\n",
+      " meas_date: 2015-03-04 17:38:26 UTC\n",
       " meas_id: 4 items (dict)\n",
-      " nchan: 69\n",
+      " nchan: 71\n",
       " projs: Average EEG reference: off\n",
       " sfreq: 512.0 Hz\n",
       ">\n"
@@ -99,10 +99,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removing projector <Projection | Average EEG reference, active : False, n_channels : 64>\n",
-      "dropped: P8\n",
-      "dropped: P10\n",
-      "dropped: T8\n"
+      "Reading 0 ... 2511914  =      0.000 ...  4906.082 secs...\n",
+      "EEG channel type selected for re-referencing\n",
+      "Applying a custom ('EEG',) reference.\n",
+      "Removing existing average EEG reference projection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mastoid channel stuff - according to openmirr repo\n",
+    "if MASTOID_CHANNELS[0] in raw.ch_names:\n",
+    "    mne.io.set_eeg_reference(raw.load_data(), MASTOID_CHANNELS, copy=False) # inplace\n",
+    "    raw.drop_channels(MASTOID_CHANNELS)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dropped: Iz\n"
      ]
     }
    ],
@@ -115,47 +135,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading 0 ... 2478165  =      0.000 ...  4840.166 secs...\n",
-      "EEG channel type selected for re-referencing\n",
-      "Applying a custom ('EEG',) reference.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Missing channels from ch_names required by include:\n['EXG5', 'EXG6']",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-56278687c728>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# mastoid channel stuff - according to openmirr proj\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmne\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_eeg_reference\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMASTOID_CHANNELS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# inplace\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mraw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop_channels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMASTOID_CHANNELS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<decorator-gen-272>\u001b[0m in \u001b[0;36mset_eeg_reference\u001b[1;34m(inst, ref_channels, copy, projection, ch_type, forward, verbose)\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\mne\\io\\reference.py\u001b[0m in \u001b[0;36mset_eeg_reference\u001b[1;34m(***failed resolving arguments***)\u001b[0m\n\u001b[0;32m    362\u001b[0m             'reference.')\n\u001b[0;32m    363\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 364\u001b[1;33m     return _apply_reference(inst, ref_channels, ch_sel, forward,\n\u001b[0m\u001b[0;32m    365\u001b[0m                             ch_type=ch_type)\n\u001b[0;32m    366\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\mne\\io\\reference.py\u001b[0m in \u001b[0;36m_apply_reference\u001b[1;34m(inst, ref_from, ref_to, forward, ch_type)\u001b[0m\n\u001b[0;32m    120\u001b[0m         \u001b[1;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mref_to\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    121\u001b[0m         \u001b[0mref_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mref_from\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 122\u001b[1;33m         \u001b[0mref_from\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpick_channels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minst\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mch_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mref_from\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mordered\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    123\u001b[0m         \u001b[0mref_to\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpick_channels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minst\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mch_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mref_to\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mordered\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    124\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\mne\\io\\pick.py\u001b[0m in \u001b[0;36mpick_channels\u001b[1;34m(ch_names, include, exclude, ordered)\u001b[0m\n\u001b[0;32m    266\u001b[0m                 \u001b[0mmissing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    267\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 268\u001b[1;33m             raise ValueError('Missing channels from ch_names required by '\n\u001b[0m\u001b[0;32m    269\u001b[0m                              'include:\\n%s' % (missing,))\n\u001b[0;32m    270\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Missing channels from ch_names required by include:\n['EXG5', 'EXG6']"
+      "Filtering raw data in 1 contiguous segment\n",
+      "Setting up band-pass filter from 0.5 - 30 Hz\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n",
+      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower passband edge: 0.50\n",
+      "- Lower transition bandwidth: 0.50 Hz (-6 dB cutoff frequency: 0.25 Hz)\n",
+      "- Upper passband edge: 30.00 Hz\n",
+      "- Upper transition bandwidth: 7.50 Hz (-6 dB cutoff frequency: 33.75 Hz)\n",
+      "- Filter length: 3381 samples (6.604 sec)\n",
+      "\n"
      ]
     }
    ],
-   "source": [
-    "# mastoid channel stuff - according to openmirr proj\n",
-    "mne.io.set_eeg_reference(raw.load_data(), MASTOID_CHANNELS, copy=False) # inplace\n",
-    "raw.drop_channels(MASTOID_CHANNELS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
    "source": [
     "RAW_COPY = raw.copy()\n",
     "\n",
@@ -178,7 +183,25 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting ICA to data using 63 channels (please be patient, this may take a while)\n",
+      "Selecting by non-zero PCA components: 63 components\n",
+      " \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\t\\anaconda3\\lib\\site-packages\\mne\\preprocessing\\infomax_.py:192: RuntimeWarning: overflow encountered in exp\n",
+      "  y = 1.0 / (1.0 + np.exp(-u))\n"
+     ]
+    }
+   ],
    "source": [
     "# set up and fit the ICA - infomax method\n",
     "ica = mne.preprocessing.ICA(method='infomax')\n",
