classification got times

--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,8 @@
     "import mne\n",
     "import sklearn\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from AudioOnsetUtils import *\n",
     "\n",
     "RAW_EOG_CHANNELS = [u'EXG1', u'EXG2', u'EXG3', u'EXG4']\n",
     "MASTOID_CHANNELS = [u'EXG5', u'EXG6']"
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +152,7 @@
     "# 1- start time (onsettime + cue duration if condition 1/2, else just onsettime)\n",
     "# 2- end time (starttime + duration of song without cue)\n",
     "def get_event_data(event_times_ids, events_index, music_version):\n",
-    "    event_id = event_times_ids[events_index[0]][TIME_INDEX]\n",
+    "    event_id = event_times_ids[events_index[0]][ID_INDEX]\n",
     "\n",
     "    if event_id < 1000:\n",
     "        \"\"\"\n",
@@ -164,11 +166,13 @@
     "        \"\"\"\n",
     "        stimulus_id, condition = decode_event_id(event_id)\n",
     "        \n",
-    "        stimulus_info = stimuli_meta[music_version][stimulus_id]\n",
+    "        stimulus_info = get_vers_stim_dict(music_version)[stimulus_id]\n",
     "        cue_length = stimulus_info['cue_length']\n",
     "        song_length = stimulus_info['song_length']\n",
     "        \n",
     "        events_index[0] += 1\n",
+    "        \n",
+    "        #print(get_id_to_song_name(stimulus_id))\n",
     "        \n",
     "        # get time of audio onset for this stimulus\n",
     "        if event_times_ids[events_index[0]][ID_INDEX] != 1000:\n",
@@ -181,12 +185,12 @@
     "        end_time = start_time + song_length\n",
     "        \n",
     "        # move the pointer by 1 to prep next call to get_event_data\n",
-    "        event_id_index[0] += 1\n",
+    "        events_index[0] += 1\n",
     "        \n",
     "        return True, (stimulus_info[\"audio_type\"], start_time, end_time)\n",
     "    else:\n",
     "        # move the pointer by 1 to prep next call to get_event_data\n",
-    "        event_id_index[0] += 1\n",
+    "        events_index[0] += 1\n",
     "        \n",
     "        return {\n",
     "            #1000: (False, 'audio onset'),\n",
@@ -208,25 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'stimuli_meta' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-84-5facb82b332c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mevents_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmusic_version\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mget_event_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevent_times_ids\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevents_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmusic_version\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-83-5f12c2cff3b9>\u001b[0m in \u001b[0;36mget_event_data\u001b[1;34m(event_times_ids, events_index, music_version)\u001b[0m\n\u001b[0;32m     23\u001b[0m         \u001b[0mstimulus_id\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcondition\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecode_event_id\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevent_id\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[0mstimulus_info\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstimuli_meta\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmusic_version\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstimulus_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mcue_length\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstimulus_info\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'cue_length'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0msong_length\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstimulus_info\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'song_length'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'stimuli_meta' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(True, (<AudioType.NONLYRICAL_LYRICAL: 1>, 521.869, 529.6427))"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "events_index = [0]\n",
-    "music_version = 1\n",
+    "music_version = get_participant_vers(\"01\")\n",
     "get_event_data(event_times_ids, events_index, music_version)"
    ]
   },
