--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,10 +175,9 @@
     "        #print(get_id_to_song_name(stimulus_id))\n",
     "        \n",
     "        # get time of audio onset for this stimulus\n",
-    "        if event_times_ids[events_index[0]][ID_INDEX] != 1000:\n",
+    "        while event_times_ids[events_index[0]][ID_INDEX] != 1000:\n",
     "            print(\"Expected an audio onset event but got {}\".format(event_times_ids[events_index[0]]))\n",
-    "            raise ValueError\n",
-    "            return False, \"expected audio onset error\"\n",
+    "            events_index[0] += 1\n",
     "            \n",
     "        audio_onset_time = event_times_ids[events_index[0]][TIME_INDEX]\n",
     "        start_time = (audio_onset_time + cue_length) if condition in [1,2] else audio_onset_time\n",
@@ -193,7 +192,6 @@
     "        events_index[0] += 1\n",
     "        \n",
     "        return {\n",
-    "            #1000: (False, 'audio onset'),\n",
     "            1111: (False, (\"noise\")),\n",
     "            KEYSTROKE_BASE_ID: (False, 'imagination failed'),\n",
     "            KEYSTROKE_BASE_ID+1: (False, 'imagination okay')\n",
@@ -212,32 +210,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "events_index = [0]\n",
+    "music_version = get_participant_vers(\"01\")\n",
+    "is_stim_event, event_data = get_event_data(event_times_ids, events_index, music_version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(True, (<AudioType.NONLYRICAL_LYRICAL: 1>, 521.869, 529.6427))"
+       "(<AudioType.NONLYRICAL_LYRICAL: 1>, 521.869, 529.6427)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "events_index = [0]\n",
-    "music_version = get_participant_vers(\"01\")\n",
-    "get_event_data(event_times_ids, events_index, music_version)"
+    "ch_names = postica_data.ch_names[:-5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(ch_names)):\n",
+    "    channel_index = 0\n",
+    "    sampling_freq = raw.info['sfreq']\n",
+    "    start_stop_seconds = np.array([event_data[-2], event_data[-1]])\n",
+    "    start_sample, stop_sample = (start_stop_seconds * sampling_freq).astype(int)\n",
+    "    raw_selection = postica_data[channel_index, start_sample:(stop_sample+9)]\n",
+    "    #print(raw_selection)"
+   ]
   }
  ],
  "metadata": {
