Added P09 ICA and function to generate list of event_data

--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file raw_data\\P14-raw.fif...\n",
+      "Opening raw data file raw_data/P14-raw.fif...\n",
       "Isotrak not found\n",
       "    Read a total of 1 projection items:\n",
       "        Average EEG reference (1 x 66)  idle\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,6 +261,134 @@
     "    raw_selection = postica_data[channel_index, start_sample:(stop_sample+9)]\n",
     "    #print(raw_selection)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_event_data_list(p_vers):\n",
+    "    events_data_list = []\n",
+    "    events_index = [0]\n",
+    "    music_version = get_participant_vers(p_vers)\n",
+    "\n",
+    "    while len(events_data_list) < 50:\n",
+    "        is_audio, event_data = get_event_data(event_times_ids, events_index, music_version)\n",
+    "        if is_audio:\n",
+    "            # ignore AudioType.NONLYRICAL_LYRICAL (songs that have lyrics but played w/o lyrics)\n",
+    "            if event_data[0] == AudioType.LYRICAL or event_data[0] == AudioType.NON_LYRICAL:\n",
+    "                events_data_list.append(event_data)\n",
+    "    \n",
+    "    return events_data_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected an audio onset event but got (21617, 1111)\n",
+      "Expected an audio onset event but got (50133, 1111)\n",
+      "Expected an audio onset event but got (77942, 1111)\n",
+      "Expected an audio onset event but got (105307, 1111)\n",
+      "Expected an audio onset event but got (138780, 1111)\n",
+      "Expected an audio onset event but got (172603, 1111)\n",
+      "Expected an audio onset event but got (205513, 1111)\n",
+      "Expected an audio onset event but got (230208, 1111)\n",
+      "Expected an audio onset event but got (262803, 1111)\n",
+      "Expected an audio onset event but got (288607, 1111)\n",
+      "Expected an audio onset event but got (326592, 1111)\n",
+      "Expected an audio onset event but got (352259, 1111)\n",
+      "Expected an audio onset event but got (394194, 1111)\n",
+      "Expected an audio onset event but got (426737, 1111)\n",
+      "Expected an audio onset event but got (460552, 1111)\n",
+      "Expected an audio onset event but got (485290, 1111)\n",
+      "Expected an audio onset event but got (511043, 1111)\n",
+      "Expected an audio onset event but got (538356, 1111)\n",
+      "Expected an audio onset event but got (566933, 1111)\n",
+      "Expected an audio onset event but got (594784, 1111)\n",
+      "Expected an audio onset event but got (619761, 1111)\n",
+      "Expected an audio onset event but got (645429, 1111)\n",
+      "Expected an audio onset event but got (678381, 1111)\n",
+      "Expected an audio onset event but got (711803, 1111)\n",
+      "Expected an audio onset event but got (796980, 1111)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(<AudioType.LYRICAL: 0>, 25506.317, 25515.9797),\n",
+       " (<AudioType.LYRICAL: 0>, 34498.317, 34507.9797),\n",
+       " (<AudioType.LYRICAL: 0>, 50270, 50279.6627),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 54023.307, 54032.5423),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 62761.307, 62770.5423),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 78119, 78128.2353),\n",
+       " (<AudioType.LYRICAL: 0>, 176551.632, 176564.9481),\n",
+       " (<AudioType.LYRICAL: 0>, 186826.632, 186839.9481),\n",
+       " (<AudioType.LYRICAL: 0>, 205695, 205708.3161),\n",
+       " (<AudioType.LYRICAL: 0>, 209453.831, 209461.5011),\n",
+       " (<AudioType.LYRICAL: 0>, 217080.831, 217088.5011),\n",
+       " (<AudioType.LYRICAL: 0>, 230390, 230397.6701),\n",
+       " (<AudioType.LYRICAL: 0>, 234156.988, 234168.6112),\n",
+       " (<AudioType.LYRICAL: 0>, 244472.988, 244484.6112),\n",
+       " (<AudioType.LYRICAL: 0>, 262969, 262980.6232),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 266740.995, 266749.3215),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 274676.995, 274685.3215),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 288813, 288821.3265),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 292559.182, 292575.18409999995),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 304732.182, 304748.18409999995),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 326757, 326773.0021),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 330480.365, 330487.23589999997),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 338417.365, 338424.23589999997),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 352415, 352421.8709),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 360216.182, 360232.18409999995),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 372332.182, 372348.18409999995),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 394359, 394375.0021),\n",
+       " (<AudioType.LYRICAL: 0>, 398137.988, 398149.6112),\n",
+       " (<AudioType.LYRICAL: 0>, 408407.988, 408419.6112),\n",
+       " (<AudioType.LYRICAL: 0>, 426896, 426907.6232),\n",
+       " (<AudioType.LYRICAL: 0>, 464489.831, 464497.5011),\n",
+       " (<AudioType.LYRICAL: 0>, 472160.831, 472168.5011),\n",
+       " (<AudioType.LYRICAL: 0>, 485458, 485465.6701),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 489227.995, 489236.3215),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 497112.995, 497121.3215),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 511223, 511231.3265),\n",
+       " (<AudioType.LYRICAL: 0>, 542297.317, 542306.9797),\n",
+       " (<AudioType.LYRICAL: 0>, 551298.317, 551307.9797),\n",
+       " (<AudioType.LYRICAL: 0>, 567108, 567117.6627),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 570872.307, 570881.5423),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 579602.307, 579611.5423),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 594964, 594973.2353),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 623648.365, 623655.2359),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 631585.365, 631592.2359),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 645611, 645617.8709),\n",
+       " (<AudioType.LYRICAL: 0>, 649373.632, 649386.9481),\n",
+       " (<AudioType.LYRICAL: 0>, 659692.632, 659705.9481),\n",
+       " (<AudioType.LYRICAL: 0>, 678550, 678563.3161),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 800880.182, 800896.1841000001),\n",
+       " (<AudioType.NON_LYRICAL: 2>, 813051.182, 813067.1841000001)]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_event_data_list(\"01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
