--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,11 @@
     "import mne\n",
     "import sklearn\n",
     "import matplotlib.pyplot as plt\n",
+    "import pywt\n",
+    "from collections import Counter\n",
+    "\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from AudioOnsetUtils import *\n",
     "\n",
@@ -20,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +43,7 @@
     "    # Drop bad channels - in place on raw\n",
     "    for bad_channel in raw.info['bads']:\n",
     "        raw.drop_channels(bad_channel)\n",
-    "        print(\"dropped: \" + bad_channel)\n",
+    "#         print(\"dropped: \" + bad_channel)\n",
     "\n",
     "    eeg_picks = mne.pick_types(raw.info, meg=False, eeg=True, eog=False, stim=False, exclude=[])\n",
     "\n",
@@ -50,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +84,7 @@
     "# 0- this is lyrical (0-2) <- YLABEL\n",
     "# 1- start time (onsettime + cue duration if condition 1/2, else just onsettime)\n",
     "# 2- end time (starttime + duration of song without cue)\n",
-    "def get_event_data(event_times_ids, events_index, music_version, postica_data):\n",
+    "def get_event_data(event_times_ids, events_index, music_version):\n",
     "    event_id = event_times_ids[events_index[0]][ID_INDEX]\n",
     "\n",
     "    if event_id < 1000:\n",
@@ -107,8 +112,7 @@
     "            #print(\"Expected an audio onset event but got {}\".format(event_times_ids[events_index[0]]))\n",
     "            events_index[0] += 1\n",
     "            \n",
-    "        audio_onset_id = event_times_ids[events_index[0]][TIME_INDEX]\n",
-    "        audio_onset_time = postica_data.times[audio_onset_id]\n",
+    "        audio_onset_time = event_times_ids[events_index[0]][TIME_INDEX]\n",
     "        start_time = (audio_onset_time + cue_length) if condition in [1,2] else audio_onset_time\n",
     "        end_time = start_time + song_length\n",
     "        \n",
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +153,7 @@
     "    music_version = get_participant_vers(p)\n",
     "\n",
     "    while len(events_data_list) < 50:\n",
-    "        is_audio, event_data = get_event_data(event_times_ids, events_index, music_version, postica_data)\n",
+    "        is_audio, event_data = get_event_data(event_times_ids, events_index, music_version)\n",
     "        if is_audio:\n",
     "            # ignore AudioType.NONLYRICAL_LYRICAL (songs that have lyrics but played w/o lyrics)\n",
     "            if event_data[0] == AudioType.LYRICAL or event_data[0] == AudioType.NON_LYRICAL:\n",
@@ -160,33 +164,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_channels_eeg_data(event_matrix, start_time, end_time, ch_names, postica_data):\n",
     "    # for each channel\n",
     "    # extract this individual event's eeg data btwn start and endtime\n",
+    "    sampling_freq = postica_data.info['sfreq']\n",
     "\n",
     "    for i in range(len(ch_names)):\n",
-    "        channel_index = 0\n",
-    "        sampling_freq = postica_data.info['sfreq']\n",
     "        start_stop_seconds = np.array([11, 13])\n",
     "        start_sample, stop_sample = (start_stop_seconds * sampling_freq).astype(int)\n",
     "        \n",
     "        # returns a tuple, see https://mne.tools/dev/auto_tutorials/raw/10_raw_overview.html\n",
+    "        #print(postica_data[i, start_sample:stop_sample])\n",
     "        ch_selection = postica_data[i, start_sample:stop_sample]\n",
-    "    \n",
-    "        # append eeg data list to eventMatrix\n",
-    "        event_matrix.append(ch_selection) \n",
     "        \n",
-    "        # print(\"CH_SELECTION\")\n",
-    "        # print(ch_selection)"
+    "#         print(\"==================\")\n",
+    "#         print(ch_selection)\n",
+    "        \n",
+    "        # append eeg data list to eventMatrix\n",
+    "        event_matrix.append(ch_selection) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -200,9 +204,6 @@
       "    Range : 0 ... 2478165 =      0.000 ...  4840.166 secs\n",
       "Ready.\n",
       "Removing projector <Projection | Average EEG reference, active : False, n_channels : 64>\n",
-      "dropped: P8\n",
-      "dropped: P10\n",
-      "dropped: T8\n",
       "Reading 0 ... 2478165  =      0.000 ...  4840.166 secs...\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
@@ -238,7 +239,6 @@
       "    Range : 0 ... 2480032 =      0.000 ...  4843.812 secs\n",
       "Ready.\n",
       "Removing projector <Projection | Average EEG reference, active : False, n_channels : 64>\n",
-      "dropped: T8\n",
       "Reading 0 ... 2480032  =      0.000 ...  4843.812 secs...\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
@@ -274,8 +274,6 @@
       "    Range : 0 ... 2433033 =      0.000 ...  4752.018 secs\n",
       "Ready.\n",
       "Removing projector <Projection | Average EEG reference, active : False, n_channels : 64>\n",
-      "dropped: Iz\n",
-      "dropped: FT7\n",
       "Reading 0 ... 2433033  =      0.000 ...  4752.018 secs...\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
@@ -387,8 +385,6 @@
       "EEG channel type selected for re-referencing\n",
       "Applying a custom ('EEG',) reference.\n",
       "Removing existing average EEG reference projection.\n",
-      "dropped: T7\n",
-      "dropped: T8\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
       "\n",
@@ -426,8 +422,6 @@
       "EEG channel type selected for re-referencing\n",
       "Applying a custom ('EEG',) reference.\n",
       "Removing existing average EEG reference projection.\n",
-      "dropped: C3\n",
-      "dropped: PO3\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
       "\n",
@@ -465,7 +459,6 @@
       "EEG channel type selected for re-referencing\n",
       "Applying a custom ('EEG',) reference.\n",
       "Removing existing average EEG reference projection.\n",
-      "dropped: Iz\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
       "\n",
@@ -503,8 +496,6 @@
       "EEG channel type selected for re-referencing\n",
       "Applying a custom ('EEG',) reference.\n",
       "Removing existing average EEG reference projection.\n",
-      "dropped: T7\n",
-      "dropped: F7\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 30 Hz\n",
       "\n",
@@ -548,7 +539,7 @@
     "    # load ica data for participant\n",
     "    filtered_data = get_participant_filtered_data(part)\n",
     "    postica_data = get_ica_data_from_file(filtered_data, part)\n",
-    "\n",
+    "    \n",
     "    # from ica data, get stimuli events\n",
     "    events = mne.find_events(postica_data)\n",
     "\n",
@@ -570,8 +561,6 @@
     "      \n",
     "        # append event_matrix to monster_matrix\n",
     "        monster_matrix.append(event_matrix)\n",
-    "\n",
-    "#         Y_list.append(audio_type)=\n",
     "        \n",
     "        # 0 for non-lyrical, 1 for lyrical\n",
     "        Y_list.append(1) if audio_type == AudioType.LYRICAL else Y_list.append(0)"
@@ -579,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,26 +577,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_test_split' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-683a9b729c7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# split data using (training vs testing)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# test_size: what proportion of original data is used for test set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_lbl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_lbl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_test_split' is not defined"
-     ]
-    }
-   ],
+   "source": [
+    "Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code adapted from https://ataspinar.com/2018/12/21/a-guide-for-using-the-wavelet-transform-in-machine-learning/\n",
+    "\n",
+    "def calculate_entropy(list_values):\n",
+    "    counter_values = Counter(list_values).most_common()\n",
+    "    probabilities = [elem[1]/len(list_values) for elem in counter_values]\n",
+    "    entropy=scipy.stats.entropy(probabilities)\n",
+    "    return entropy\n",
+    " \n",
+    "def calculate_statistics(list_values):\n",
+    "    n5 = np.nanpercentile(list_values, 5)\n",
+    "    n25 = np.nanpercentile(list_values, 25)\n",
+    "    n75 = np.nanpercentile(list_values, 75)\n",
+    "    n95 = np.nanpercentile(list_values, 95)\n",
+    "    median = np.nanpercentile(list_values, 50)\n",
+    "    mean = np.nanmean(list_values)\n",
+    "    std = np.nanstd(list_values)\n",
+    "    var = np.nanvar(list_values)\n",
+    "    rms = np.nanmean(np.sqrt(list_values**2))\n",
+    "    return [n5, n25, n75, n95, median, mean, std, var, rms]\n",
+    " \n",
+    "def calculate_crossings(list_values):\n",
+    "    val_array = list_values\n",
+    "    num_zero_crossings = ((val_array[:-1] * val_array[1:]) < 0).sum()\n",
+    "    num_mean_crossings = ((val_array[:-1] * val_array[1:]) < np.nanmean(list_values)).sum()  \n",
+    "    return [num_zero_crossings, num_mean_crossings]\n",
+    " \n",
+    "def get_features(list_values):\n",
+    "    entropy = calculate_entropy(list_values)\n",
+    "    crossings = calculate_crossings(list_values)\n",
+    "    statistics = calculate_statistics(list_values)\n",
+    "    return [entropy] + crossings + statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adapted from https://ataspinar.com/2018/12/21/a-guide-for-using-the-wavelet-transform-in-machine-learning/\n",
+    "WAVELET_NAME = 'db2' \n",
+    "\n",
+    "def get_dataset_features(dataset):\n",
+    "    feature_vectors = []\n",
+    "    \n",
+    "    for event_eeg_index in range(0, len(dataset)):\n",
+    "        event_features = []\n",
+    "        \n",
+    "        for channel_index in range(0, len(dataset[event_eeg_index])):\n",
+    "            channel_signal = dataset[event_eeg_index][channel_index]\n",
+    "            print(channel_signal)\n",
+    "            \n",
+    "            coeff_list = pywt.wavedec(channel_signal, WAVELET_NAME)\n",
+    "            #print(coeff_list)\n",
+    "            for coeff in coeff_list:\n",
+    "                #print(coeff)\n",
+    "                pass\n",
+    "                #event_features += get_features(coeff)\n",
+    "                \n",
+    "        feature_vectors.append(event_features)\n",
+    "        \n",
+    "    X = np.array(feature_vectors)\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(monster_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_dataset_features(monster_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# split data using (training vs testing)\n",
     "# test_size: what proportion of original data is used for test set\n",
     "train_data, test_data, train_lbl, test_lbl = train_test_split(X_list, Y_list, test_size=0.20, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM and Check Accuracy\n"
    ]
   },
   {
@@ -618,7 +698,7 @@
    "source": [
     "def calcAccuracy(predictions, y):\n",
     "    # True positives, false positives, etc.\n",
-    "    TP_ = np.logicaland(predictions, y)\n",
+    "    TP = np.logical_and(predictions, y)\n",
     "    FP = np.logical_and(predictions, np.logicalnot(y))\n",
     "    TN = np.logical_and(np.logical_not(predictions), np.logicalnot(y))\n",
     "    FN = np.logical_and(np.logicalnot(predictions), y)\n",
@@ -626,7 +706,7 @@
     "    TP = sum(TP)\n",
     "    FP = sum(FP)\n",
     "    TN = sum(TN)\n",
-    "    FN = sum(FN_)\n",
+    "    FN = sum(FN)\n",
     "    \n",
     "    accuracy = (TP + TN)/(TP + FP + TN + FN)\n",
     "    print('Accuracy:{}'.format(accuracy))\n",
@@ -641,9 +721,6 @@
    "outputs": [],
    "source": [
     "# perform classification using SVM\n",
-    "\n",
-    "from sklearn import svm\n",
-    "\n",
     "clf = svm.LinearSVC()\n",
     "clf.fit(train_data, train_lbl)\n",
     "y_pred = clf.predict(test_data)\n",
@@ -651,7 +728,7 @@
     "# compare predictions for accuracy\n",
     "accuracy = calcAccuracy(y_pred, Y_list)\n",
     "\n",
-    "# we could compare accuracy linearSVC and just SVC"
+    "# future work: we could compare accuracy linearSVC and just SVC"
    ]
   },
   {
